# turbovision

./: .dockerignore  .gitignore  Dockerfile  MINER.md  README.md  VALIDATOR.md  docker-compose.yml  env.example  output.txt  prometheus.yml  pyproject.toml
.github/workflows/: docker_push.yml
example_miner/: README.md  chute_config.yml  miner.py
images/: sv-cli.puml
scorevision/: __init__.py
scorevision/chute_template/: schemas.py  turbovision_chute.py.j2
scorevision/cli/: push.py  run_vlm_pipeline.py  runner.py  signer_api.py  validate.py
scorevision/utils/: async_clients.py  bittensor_helpers.py  challenges.py  chutes_helpers.py  cloudflare_helpers.py  data_models.py  evaluate.py  huggingface_helpers.py  image_processing.py  miner_registry.py  predict.py  prometheus.py  settings.py  signing.py  video_processing.py
scorevision/vlm_pipeline/: vlm_annotator.py
scorevision/vlm_pipeline/domain_specific_schemas/: basketball.py  challenge_types.py  football.py
scorevision/vlm_pipeline/image_annotation/: pairwise.py  single.py
scorevision/vlm_pipeline/non_vlm_scoring/: keypoints.py  objects.py  smoothness.py
scorevision/vlm_pipeline/utils/: data_models.py  llm_vlm.py  prompts.py  response_models.py
scripts/: detect.py  robo_data.py  train.py  validate.py
